--- a/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
+++ b/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
@@ -6,7 +6,7 @@
         xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
-        Title="ActiveProjects" Height="529.268" Width="671.951">
+        Title="Active Projects" Height="850" Width="750" FontSize="16" Background="#FF2E3137" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <viewModels:ActiveProjectsViewModel />
     </Window.DataContext>
@@ -15,19 +15,20 @@
             <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
         </intr:EventTrigger>
     </intr:Interaction.Triggers>
-    <Grid Background="#FF2E3137" Margin="0,0,3.6,-3">
-        <Label Content="ACTIVE PROJECTS" HorizontalAlignment="Left" Margin="231,39,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White"/>
-        <DatePicker Name="fromDater" HorizontalAlignment="Left" Margin="93,148,0,0" VerticalAlignment="Top" SelectedDate="{Binding Path=BeginDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <DatePicker Name="toDater" HorizontalAlignment="Left" Margin="260,147,0,0" VerticalAlignment="Top" SelectedDate="{Binding Path=EndDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Content="Search" HorizontalAlignment="Left" Margin="399,152,0,0" VerticalAlignment="Top" Width="75" Background="#FF1A76AE" Foreground="White" FontWeight="Bold" Command="{Binding Search}" Click="Search_Click"/>
-        <Label Content="From" HorizontalAlignment="Left" Margin="51,146,0,0" VerticalAlignment="Top" Foreground="#FFDCE4DC" FontWeight="Bold"/>
-        <Label Content="To" HorizontalAlignment="Left" Margin="231,147,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="White"/>
-        <Separator HorizontalAlignment="Left" Height="17" Margin="171,86,0,0" VerticalAlignment="Top" Width="303"/>
-        <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="81" Background="#FF4074CB" Foreground="White" FontSize="14" Margin="146,408,0,0" Command="{Binding EditProject}" Height="34"/>
-        <Button Content="Add new" HorizontalAlignment="Left" Margin="31,408,0,0" VerticalAlignment="Top" Width="99" Background="#FF0D5923" Foreground="White" FontSize="14" Command="{Binding AddNewProject}" Click="Button_Click" Height="34"/>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="556,450,0,0" VerticalAlignment="Top" Width="81" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Back}" Height="27"/>
-        <DataGrid Name="ProjectsDataGrid" HorizontalAlignment="Left" Height="195" Margin="31,198,0,0" VerticalAlignment="Top" Width="606" Loaded="ProjectsDataGrid_Loaded" MouseDoubleClick="ProjectsDataGrid_MouseDoubleClick" SelectionMode="Single"/>
-        <Button Content="Delete" HorizontalAlignment="Left" Margin="247,408,0,0" VerticalAlignment="Top" Width="83" Background="#FFCB4040" Foreground="White" FontSize="14" Command="{Binding Delete}" Height="34"/>
+    <Grid Background="#FF2E3137" Height="850" Width="750">
+        <Label Content="ACTIVE PROJECTS" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="54,35,54,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White" Width="642"/>
+        <Canvas >
+            <DatePicker Name="fromDater" HorizontalAlignment="Left" VerticalAlignment="Top" SelectedDate="{Binding Path=BeginDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="111" Canvas.Top="101"/>
+            <DatePicker Name="toDater" HorizontalAlignment="Left" VerticalAlignment="Top" SelectedDate="{Binding Path=EndDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="364" Canvas.Top="99"/>
+            <Button Content="Search" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="30" Background="AliceBlue" Foreground="Black"  Command="{Binding Search}" Click="Search_Click" Canvas.Left="582" Canvas.Top="101"/>
+            <Label Content="From" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFDCE4DC" FontWeight="Bold" Canvas.Left="51" Canvas.Top="98"/>
+            <Label Content="To" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="Bold" Foreground="White" Canvas.Left="316" Canvas.Top="98"/>
+            <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Background="AliceBlue" Foreground="Black" FontSize="14" Command="{Binding EditProject}" Height="30" Canvas.Left="155" Canvas.Top="743"/>
+            <Button Content="Add new" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Background="AliceBlue" Foreground="Black" FontSize="14" Command="{Binding AddNewProject}" Click="Button_Click" Height="30" Canvas.Left="51" Canvas.Top="743"/>
+            <Button Content="Back" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Background="AliceBlue" Foreground="Black" FontSize="14" Command="{Binding Back}" Height="30" Canvas.Left="582" Canvas.Top="743"/>
+            <DataGrid Name="ProjectsDataGrid" HorizontalAlignment="Left" Height="545" VerticalAlignment="Top" Width="635" Loaded="ProjectsDataGrid_Loaded" MouseDoubleClick="ProjectsDataGrid_MouseDoubleClick" SelectionMode="Single" Canvas.Left="51" Canvas.Top="158"/>
+            <Button Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Background="AliceBlue" Foreground="Black" FontSize="14" Command="{Binding Delete}" Height="30" Canvas.Left="260" Canvas.Top="743"/>
+        </Canvas>
     </Grid>
 </Window>
 
