--- a/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
+++ b/BmsWpf/Views/ChildWindows/MainCalendarEvents.xaml
@@ -6,7 +6,7 @@
         xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         mc:Ignorable="d"
-        Title="MainCalendarEvents" Height="600" Width="750" Background="#2e3137">
+        Title="Main Calendar Events" Height="850" Width="750" Background="#2e3137" WindowStartupLocation="CenterScreen" >
     <Window.DataContext>
         <viewModels:MainCalendarEventsViewModel/>
     </Window.DataContext>
@@ -15,16 +15,16 @@
             <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
         </intr:EventTrigger>
     </intr:Interaction.Triggers>
-    <Grid>
+    <Grid Height="850" Width="750" Background="#2e3137">
         <Calendar VerticalAlignment="Top" HorizontalAlignment="Left" Margin="28,48,0,0" Height="166" Width="180" Grid.ColumnSpan="2"></Calendar>
-        <Button Name ="BackButton" Command="{Binding Back}"  Content="Back" Background="AliceBlue" Height="50" Width="180" Margin="318.566,481,63,39.4" Grid.Column="1"/>
-        <Button Name="AddEventButton" Content="Add new event" Command="{Binding AddNew}" Background="AliceBlue" Height="50" Width="180" Margin="28,265,536,255.4" Grid.ColumnSpan="2"/>
-        <Button Name="EditEventButton" Content="Edit event" Command="{Binding Edit}" Background="AliceBlue" Height="50" Width="180" Margin="28,322,536,198.4" RenderTransformOrigin="0.503,0.266" Grid.ColumnSpan="2"/>
-        <Button Name="DeleteEventButton" Content="Delete event" Command="{Binding Delete}" Background="AliceBlue" Height="50" Width="180" Margin="28,381,536,139.4" Grid.ColumnSpan="2"/>
+        <Button Name ="BackButton" Command="{Binding Back}"  Content="Back" Background="AliceBlue" Height="50" Width="180" Margin="28,741,542,59"/>
+        <Button Name="AddEventButton" Content="Add new event" Command="{Binding AddNew}" Background="AliceBlue" Height="50" Width="180" Margin="28,518,542,282"/>
+        <Button Name="EditEventButton" Content="Edit event" Command="{Binding Edit}" Background="AliceBlue" Height="50" Width="180" Margin="28,573,542,227" RenderTransformOrigin="0.503,0.266"/>
+        <Button Name="DeleteEventButton" Content="Delete event" Command="{Binding Delete}" Background="AliceBlue" Height="50" Width="180" Margin="28,629,542,171"/>
 
         <DataGrid Name="EventsDataGrid" 
                   Background="AntiqueWhite" 
-                  HorizontalAlignment="Right" Height="383" 
+                  HorizontalAlignment="Right" Height="630" 
                   Margin="0,48,63,0" VerticalAlignment="Top" 
                   Width="428" VerticalScrollBarVisibility="Auto" 
                   SelectionMode="Single"
@@ -37,7 +37,7 @@
                 </intr:EventTrigger>
             </intr:Interaction.Triggers>
         </DataGrid>
-      
+
         <Label Name="timeView" HorizontalAlignment="Left" Margin="194.566,14,0,0" VerticalAlignment="Top" FontSize="16" Width="304" Foreground="White" Height="29" Grid.Column="1"/>
         <Label Content="Events for:" Foreground="White" FontSize="18" HorizontalAlignment="Left" Margin="70.566,14,0,0" VerticalAlignment="Top" Width="100" Grid.Column="1"/>
     </Grid>
