--- a/BmsWpf/Views/ChildWindows/MainInquiries.xaml
+++ b/BmsWpf/Views/ChildWindows/MainInquiries.xaml
@@ -6,7 +6,7 @@
         xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
-        Title="MainInquiries"  Height="450.151" Width="483.648" Background="#2e3137">
+        Title="Main Inquiries"  Height="850" Width="750" FontSize="16" Background="#FF2E3137" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <viewModels:MainInquiriesViewModel />
     </Window.DataContext>
@@ -15,25 +15,15 @@
             <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
         </intr:EventTrigger>
     </intr:Interaction.Triggers>
-    <Grid Margin="0,0,4.2,-3">
-        <Label Content="Inquiries" 
-            Foreground="White" 
-            FontSize="25" 
-            HorizontalAlignment="Center" 
-            Margin="105,10,74.6,217.4" 
-            Width="114"/>
-        <Separator 
-            HorizontalAlignment="Left" 
-            Height="9" 
-            Margin="182,45,0,0" 
-            VerticalAlignment="Top" 
-            Width="144"/>
-        <DataGrid x:Name="InquDataGrid" 
+    <Grid Height="850" Width="750" Background="#FF2E3137">
+        <Label Content="INQUIRES" 
+               HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="54,35,54,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White" Width="642"/>
+        <DataGrid Name="InquDataGrid" 
                   HorizontalAlignment="Left" 
-                  Height="195" 
-                  Margin="24,76,0,0" 
+                  Height="590" 
+                  Margin="54,115,0,0" 
                   VerticalAlignment="Top" 
-                  Width="420"
+                  Width="635" 
                   SelectionMode="Single"
                   CanUserAddRows="false"
                   ItemsSource="{Binding Inquiries}"
@@ -46,44 +36,43 @@
         </DataGrid>
         <Button Content="Add new" 
                 HorizontalAlignment="Left" 
-                Margin="24,276,0,0" 
+                Margin="54,750,0,0" 
                 VerticalAlignment="Top" 
-                Width="82" 
-                Background="#FF0D5923" 
-                Foreground="White" 
+                Width="100" 
+                Background="AliceBlue" 
+                Foreground="Black" 
                 FontSize="14" 
-                Height="33"
+                Height="30"
                 Command="{Binding AddNew}"/>
         <Button Content="Edit" 
                 HorizontalAlignment="Left" 
-                Margin="111,276,0,0" 
+                Margin="159,750,0,0" 
                 VerticalAlignment="Top" 
-                Width="79" 
-                Background="#FF4074CB" 
-                Foreground="White" 
+                Width="100" 
+                Background="AliceBlue" 
+                Foreground="Black" 
                 FontSize="14" 
-                RenderTransformOrigin="-0.774,-1.496" 
-                Height="33"
+                Height="30"
                 Command="{Binding Edit}"/>
         <Button Content="Delete" 
                 HorizontalAlignment="Left" 
-                Margin="195,276,0,0" 
                 VerticalAlignment="Top" 
-                Width="79" 
-                Background="#FFCB4040" 
-                Foreground="White" 
+                Width="100" 
+                Background="AliceBlue" 
+                Foreground="Black" 
                 FontSize="14" 
-                Height="33" 
-                RenderTransformOrigin="-0.048,0.621"
+                Margin="266,750,0,0" 
+                Height="30"
                 Command="{Binding Delete}"/>
         <Button Content="Back" 
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top" 
-                Width="75" 
-                Background="#FFCB4040" 
-                Foreground="White" 
+                Width="100" 
+                Background="AliceBlue" 
+                Foreground="Black" 
                 FontSize="14" 
-                Margin="369,366,0,0" 
+                Margin="589,750,0,0" 
+                Height="30"
                 Command="{Binding Back}"/>
     </Grid>
 </Window>
