--- a/BmsWpf/Views/Forms/CalendarEventForm.xaml
+++ b/BmsWpf/Views/Forms/CalendarEventForm.xaml
@@ -6,7 +6,7 @@
         xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         xmlns:intr="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
-        Title="Calendar Event Form" Height="600" Width="750" Background="#2e3137">
+        Title="Calendar Event Form"  Height="850" Width="750" FontSize="16" Background="#FF2E3137" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <viewModels:CalendarEventFormViewModel/>
     </Window.DataContext>
@@ -15,25 +15,23 @@
             <intr:InvokeCommandAction Command="{Binding WindowLoaded}"/>
         </intr:EventTrigger>
     </intr:Interaction.Triggers>
-    <Grid>
-        <Label Content="Add new event" 
-               Foreground="White" 
-               FontSize="25" 
-               HorizontalAlignment="Center" VerticalAlignment="Center" Margin="280,52,261,474.4" RenderTransformOrigin="0.5,0.5" Width="203"/>
-        <Canvas HorizontalAlignment="Center" Height="375" Margin="83,101,89,94.4" VerticalAlignment="Center" Width="572">
+    <Grid  Background="#FF2E3137" Height="850" Width="750">
+        <Label Content="Event" 
+               HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="54,35,54,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White" Width="642"/>
+        <Canvas HorizontalAlignment="Center" Height="452" Margin="107,112,107,286" VerticalAlignment="Center" Width="536">
             <Label Content="Title" Canvas.Left="13" Canvas.Top="10" Width="100" FontSize="16" Foreground="AntiqueWhite"/>
             <Label Content="Description" Canvas.Left="13" Canvas.Top="60" FontSize="16" Foreground="AntiqueWhite" Width="100"/>
             <Label Content="Start Date" Canvas.Left="13" Canvas.Top="170" Width="100" FontSize="16" Foreground="AntiqueWhite"/>
-            <Label Content="End Date" Canvas.Left="13" Canvas.Top="200" FontSize="16" Foreground="AntiqueWhite" Width="100"/>
-            <Label Content="Pick color" Canvas.Left="13" Canvas.Top="232" Width="100" FontSize="16" Foreground="AntiqueWhite"/>
-            <Label Content="Creator" Canvas.Left="13" Canvas.Top="264" Width="100" FontSize="16" Foreground="AntiqueWhite" RenderTransformOrigin="0.524,2.113"/>
+            <Label Content="End Date" Canvas.Left="13" Canvas.Top="204" FontSize="16" Foreground="AntiqueWhite" Width="100"/>
+            <Label Content="Pick color" Canvas.Left="13" Canvas.Top="240" Width="100" FontSize="16" Foreground="AntiqueWhite"/>
+            <Label Content="Creator" Canvas.Left="13" Canvas.Top="278" Width="100" FontSize="16" Foreground="AntiqueWhite" RenderTransformOrigin="0.524,2.113"/>
 
-            <DatePicker Name="StartDateBox" Canvas.Left="185" Canvas.Top="170" Width="215" Height="32" SelectedDate="{Binding Path=StartDate, StringFormat=dd/MM/yyyy}" />
-            <DatePicker Name="EndDateBox" Canvas.Left="185" Canvas.Top="200" Width="215" Height="32" SelectedDate="{Binding Path=EndDate, StringFormat=dd/MM/yyyy}" />
-            <TextBox Name="TitleBox" Height="40" Canvas.Left="185" TextWrapping="Wrap" Text="{Binding Title,Mode=TwoWay}" Canvas.Top="10" Width="215" BorderBrush="Beige"/>
-            <TextBox Name="DescriptionBox" Height="100" Canvas.Left="185" TextWrapping="Wrap" Text="{Binding Description,Mode=TwoWay}" Canvas.Top="60" Width="215" BorderBrush="Beige"/>
+            <DatePicker Name="StartDateBox" Canvas.Left="185" Canvas.Top="170" Width="295" Height="32" SelectedDate="{Binding Path=StartDate, StringFormat=dd/MM/yyyy}" />
+            <DatePicker Name="EndDateBox" Canvas.Left="185" Canvas.Top="204" Width="295" Height="32" SelectedDate="{Binding Path=EndDate, StringFormat=dd/MM/yyyy}" />
+            <TextBox Name="TitleBox" Height="40" Canvas.Left="185" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{Binding Title,Mode=TwoWay}" Canvas.Top="10" Width="295" BorderBrush="Beige"/>
+            <TextBox Name="DescriptionBox" Height="100" Canvas.Left="185" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{Binding Description,Mode=TwoWay}" Canvas.Top="60" Width="295" BorderBrush="Beige"/>
 
-            <ComboBox Name="ColorPickerBox"  Canvas.Left="185" Canvas.Top="237" Width="215" ItemsSource="{Binding}">
+            <ComboBox Name="ColorPickerBox"  Canvas.Left="185" Canvas.Top="245" Width="295" ItemsSource="{Binding}">
                 <ComboBoxItem Content="Green"></ComboBoxItem>
                 <ComboBoxItem Content="Red"></ComboBoxItem>
                 <ComboBoxItem Content="Blue"></ComboBoxItem>
@@ -41,12 +39,21 @@
                 <ComboBoxItem Content="Yellow"></ComboBoxItem>
             </ComboBox>
 
-            <Button Content="Save" Canvas.Left="185" Canvas.Top="346" Width="50" Command="{Binding Save}"/>
-            <Button Content="Back" Width="50"  Canvas.Top="346" Canvas.Left="350" Command="{Binding Back}"></Button>
-            <ComboBox Name="CreatorBox"  Canvas.Left="185" Canvas.Top="267" Width="215">
+            <Button Content="Save" Canvas.Left="380" Canvas.Top="368" Width="100" Height="30" Command="{Binding Save}"/>
+            <ComboBox Name="CreatorBox"  Canvas.Left="185" Canvas.Top="281" Width="295">
             </ComboBox>
+            <Label Content="Project" Canvas.Left="13" Canvas.Top="313" Width="100" FontSize="16" Foreground="AntiqueWhite" RenderTransformOrigin="0.524,2.113"/>
+            <ComboBox Name="ProjectComboBox"  Canvas.Left="185" Canvas.Top="317" Width="295"/>
 
         </Canvas>
+        <Button Content="Back" HorizontalAlignment="Left" 
+                    VerticalAlignment="Top" 
+                    Width="100" 
+                    Background="AliceBlue" 
+                    Foreground="Black" 
+                    FontSize="14" 
+                    Margin="589,750,0,0" 
+                    Height="30" Command="{Binding Back}"/>
     </Grid>
 </Window>
 
