--- a/BmsWpf/Views/Forms/NoteForm.xaml
+++ b/BmsWpf/Views/Forms/NoteForm.xaml
@@ -5,29 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BmsWpf.Views.Forms"
         mc:Ignorable="d"
-        Title="NoteForm" Height="600" Width="750" Background="#2e3137">
+        Title="NoteForm" Height="850" Width="750" FontSize="16" Background="#FF2E3137" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Label Content="Add new note" 
-               Foreground="White" 
-               FontSize="25" 
-               HorizontalAlignment="Center" VerticalAlignment="Center" Margin="263,43,265,474.4" RenderTransformOrigin="0.5,0.5" Width="216" Height="53"/>
-        <Canvas HorizontalAlignment="Center" Height="375" Margin="83,101,89,94.4" VerticalAlignment="Center" Width="572">
-            <Label Content="Description" Canvas.Left="13" Canvas.Top="54" FontSize="16" Foreground="AntiqueWhite" Width="100"/>
-            <Label Content="Date" Canvas.Left="13" Canvas.Top="17" Width="100" FontSize="16" Foreground="AntiqueWhite"/>
-            <Label Content="Type" Canvas.Left="13" Canvas.Top="278" FontSize="16" Foreground="AntiqueWhite" Width="100"/>
-            <TextBox Name="DescriptionBox" Height="224" Canvas.Left="185" TextWrapping="Wrap" Text="{Binding Description,Mode=TwoWay}" Canvas.Top="54" Width="215" BorderBrush="Beige"/>
-
-            <Button Content="Save" Canvas.Left="185" Canvas.Top="346" Width="50" Click="Button_Click_Save"/>
-            <Button Content="Back" Width="50"  Canvas.Top="346" Canvas.Left="350" Click="Button_Click_Back"></Button>
-            <Button Content="Edit" Width="50"  Canvas.Top="346" Canvas.Left="268" Click="Button_Click_Edit"></Button>
-            <ComboBox Name="NoteTypeBox"  Canvas.Left="185" Canvas.Top="283" Width="216" Height="30">
-                <ComboBoxItem Content="Important"></ComboBoxItem>
-                <ComboBoxItem Content="ForReview"></ComboBoxItem>
-                <ComboBoxItem Content="Event"></ComboBoxItem>
-                <ComboBoxItem Content="ToDo"></ComboBoxItem>
-            </ComboBox>
-            <Label Name="Date"  Content="Label" Canvas.Left="185" Canvas.Top="17" Height="32" Width="215"/>
-
-        </Canvas>
+        <Label Content="Note" 
+               HorizontalContentAlignment="Center" HorizontalAlignment="Center" Margin="54,35,54,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Background="#FF2E3137" Foreground="White" Width="642"/>
+        <Button Content="Back" Click="Button_Click_Back" VerticalAlignment="Top" 
+                Width="100" 
+                Background="AliceBlue" 
+                Foreground="Black" 
+                FontSize="14" 
+                Height="30"
+                Margin="589,750,0,0" />
+        <Button Content="Save" Command="{Binding Save}" HorizontalAlignment="Left" 
+                Margin="540,587,0,0" 
+                VerticalAlignment="Top" 
+                Width="100" 
+                Background="AliceBlue" 
+                Foreground="Black" 
+                FontSize="14" 
+                Height="30"/>
+        <Label Content="Description" FontSize="16" Foreground="AntiqueWhite" Margin="64,147,580,641"/>
+        <Label Content="Date" FontSize="16" Foreground="AntiqueWhite" Margin="64,110,580,678"/>
+        <Label Content="Type" FontSize="16" Foreground="AntiqueWhite" Margin="64,510,580,278"/>
+        <TextBox Name="DescriptionBox" TextWrapping="Wrap"
+                 AcceptsReturn="True"
+                 VerticalScrollBarVisibility="Visible" Text="{Binding Description, Mode=TwoWay}" BorderBrush="Beige" Margin="193,144,104,326"/>
+        <ComboBox Name="NoteTypeBox"  Margin="191,512,104,278">
+            <ComboBoxItem Content="Important"/>
+            <ComboBoxItem Content="ForReview"/>
+            <ComboBoxItem Content="Event"/>
+            <ComboBoxItem Content="ToDo"/>
+        </ComboBox>
+        <Label Name="Date" Content="Label" Margin="191,107,104,681"/>
     </Grid>
 </Window>
