--- a/BmsWpf/Views/Forms/CalendarEventForm.xaml
+++ b/BmsWpf/Views/Forms/CalendarEventForm.xaml
@@ -28,22 +28,16 @@
 
             <DatePicker Name="StartDateBox" Canvas.Left="185" Canvas.Top="170" Width="295" Height="32" SelectedDate="{Binding Path=StartDate, StringFormat=dd/MM/yyyy}" />
             <DatePicker Name="EndDateBox" Canvas.Left="185" Canvas.Top="204" Width="295" Height="32" SelectedDate="{Binding Path=EndDate, StringFormat=dd/MM/yyyy}" />
-            <TextBox Name="TitleBox" Height="40" Canvas.Left="185" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{Binding Title,Mode=TwoWay}" Canvas.Top="10" Width="295" BorderBrush="Beige"/>
-            <TextBox Name="DescriptionBox" Height="100" Canvas.Left="185" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{Binding Description,Mode=TwoWay}" Canvas.Top="60" Width="295" BorderBrush="Beige"/>
+            <TextBox Name="TitleBox" Height="40" Canvas.Left="185" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{Binding Title}" Canvas.Top="10" Width="295" BorderBrush="Beige"/>
+            <TextBox Name="DescriptionBox" Height="100" Canvas.Left="185" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{Binding Description}" Canvas.Top="60" Width="295" BorderBrush="Beige"/>
 
-            <ComboBox Name="ColorPickerBox"  Canvas.Left="185" Canvas.Top="245" Width="295" ItemsSource="{Binding}">
-                <ComboBoxItem Content="Green"></ComboBoxItem>
-                <ComboBoxItem Content="Red"></ComboBoxItem>
-                <ComboBoxItem Content="Blue"></ComboBoxItem>
-                <ComboBoxItem Content="Pink"></ComboBoxItem>
-                <ComboBoxItem Content="Yellow"></ComboBoxItem>
-            </ComboBox>
+            <ComboBox Name="ColorPickerBox"  Canvas.Left="185" Canvas.Top="245" Width="295" ItemsSource="{Binding Colors}" SelectedItem="{Binding SelectedColor}"/>
+
 
             <Button Content="Save" Canvas.Left="380" Canvas.Top="368" Width="100" Height="30" Command="{Binding Save}"/>
-            <ComboBox Name="CreatorBox"  Canvas.Left="185" Canvas.Top="281" Width="295">
-            </ComboBox>
+            <ComboBox Name="CreatorBox"  Canvas.Left="185" Canvas.Top="281" Width="295" ItemsSource="{Binding UsernameList}" SelectedItem="{Binding SelectedUsername}" />
             <Label Content="Project" Canvas.Left="13" Canvas.Top="313" Width="100" FontSize="16" Foreground="AntiqueWhite" RenderTransformOrigin="0.524,2.113"/>
-            <ComboBox Name="ProjectComboBox"  Canvas.Left="185" Canvas.Top="317" Width="295"/>
+            <ComboBox Name="ProjectComboBox"  Canvas.Left="185" Canvas.Top="317" Width="295" ItemsSource="{Binding ProjectsList}" SelectedItem="{Binding SelectedProject}"/>
 
         </Canvas>
         <Button Content="Back" HorizontalAlignment="Left" 
@@ -53,7 +47,8 @@
                     Foreground="Black" 
                     FontSize="14" 
                     Margin="589,750,0,0" 
-                    Height="30" Command="{Binding Back}"/>
+                    Height="30" 
+                Command="{Binding Back}"/>
     </Grid>
 </Window>
 
